# RXMesh

./: .clang-format  .gitignore  CITATIONS.cff  CMakeLists.txt  LICENSE  README.md  sweep_edgefrac_test.sh  sweep_test.sh  test.ipynb
analysis/: CMakeLists.txt  sepComp_runtime.cpp
apps/: CMakeLists.txt
apps/ARAP/: CMakeLists.txt  arap.cu
apps/DGPC/: CMakeLists.txt  dgpc.cu
apps/Delaunay/: CMakeLists.txt  benchmark.sh  delaunay_edge_flip.cu  delaunay_edge_flip_kernel.cuh  delaunay_rxmesh.cuh  delaunay_rxmesh.h  mcf_rxmesh.h  mcf_rxmesh_kernel.cuh
apps/DiffARAP/: CMakeLists.txt  arap_kernels.h  diff_arap.cu
apps/EmbeddedARAP/: CMakeLists.txt  embedded_arap.cu  util.h
apps/Filtering/: CMakeLists.txt  benchmark.sh  filtering.cu  filtering_openmesh.h  filtering_rxmesh.cuh  filtering_rxmesh_kernel.cuh  filtering_util.h
apps/GaussianCurvature/: CMakeLists.txt  benchmark.sh  gaussian_curvature.cu  gaussian_curvature_hardwired.cuh  gaussian_curvature_kernel.cuh  gaussian_curvature_ref.h
apps/GeneralCG/: CMakeLists.txt  cg.cu
apps/GeneralCG/include/General/: GenericCG.h
apps/Geodesic/: CMakeLists.txt  benchmark.sh  geodesic.cu  geodesic_kernel.cuh  geodesic_ptp_openmesh.h  geodesic_ptp_rxmesh.h  geodesic_ptp_rxmesh_graph.h  geodesic_toplesets.cuh
apps/GravoMG/: CMakeLists.txt  gmg.cu
apps/GravoMG/include/: GMG.h  GMGCSR.h  GMGProlongatorCreation.h  GMGRXMeshKernels.h  GMG_kernels.h  GPUGMG.h  MakeFirstOperator.h  NeighborHandling.h  RXMeshMCFSetup.h  VCycle.h  VectorCSR3D.h  cluster.h  fps_sampler.h  hashtable.h  interactive.h  jacobi_solver.h  v_cycle.h
apps/Heat/: CMakeLists.txt  heat.cu
apps/MCF/: CMakeLists.txt  benchmark.cmd  benchmark.sh  create_AB.bat  mcf.cu  mcf_cg.h  mcf_cg_mat_free.h  mcf_chol.h  mcf_cudss.h  mcf_cusolver_chol.cuh  mcf_eigen.h  mcf_gmg.h  mcf_kernels.cuh  mcf_openmesh.h  mcf_rxmesh.h  mcf_rxmesh_kernel.cuh  mcf_sparse_matrix.cuh  mcf_util.h  run_all.bat
apps/ManiOpt/: CMakeLists.txt  mani_opt.cu  mean_curv.h
apps/MassSpring/: CMakeLists.txt  barrier_energy.h  boundary_condition.h  draw.h  gravity_energy.h  inertial_energy.h  mass_spring.cu  mass_spring_energy.h  run.cmd
apps/NDReorder/: CMakeLists.txt  check_nnz.h  compute_chol_nnz.h  count_nnz_fillin.h  eigen.cmake  matplotlibcpp.h  metis.cmake  nd_coarsen_manager.cuh  nd_cross_patch_nd_implementation.cuh  nd_cross_patch_oedering.cuh  nd_cross_patch_ordering.cuh  nd_mgnd_implementation.cuh  nd_partition_manager.cuh  nd_reorder.cu  nd_reorder_kernel.cuh  nd_single_patch_ordering.cuh  render_permutation.h  test_all_permutations.cu
apps/NeoHookean/: CMakeLists.txt  barrier_energy.h  bending_energy.cu  bending_energy.h  boundary_condition.h  draw.h  example_scene.txt  friction_energy.h  gravity_energy.h  inertial_energy.h  init.h  naive_hessian_update.h  neo_hookean.cu  neo_hookean_energy.h  render_obj.sh  render_scene.py  scene_config.h  small.txt  spot.txt  spring_energy.h
apps/Param/: CMakeLists.txt  param.cu
apps/PolyVector/: CMakeLists.txt  polyvector.cu  raw_field_io.h  read_raw_field.h
apps/QSlim/: CMakeLists.txt  link_condition.cuh  qslim.cu  qslim_kernels.cuh  qslim_rxmesh.cuh
apps/Remesh/: CMakeLists.txt  benchmark.sh  collapse.cuh  flip.cuh  link_condition.cuh  remesh.cu  remesh_kernels.cuh  remesh_rxmesh.cuh  smoothing.cuh  split.cuh  util.cuh
apps/SCP/: CMakeLists.txt  scp.cu
apps/SECHistogram/: CMakeLists.txt  link_condition.cuh  sec.cu  sec_kernels.cuh  sec_rxmesh.cuh
apps/SECPriority/: CMakeLists.txt  main.cu  secp.cu  secp_kernels.cuh  secp_pair.h  secp_rxmesh.cuh
apps/ShortestEdgeCollapse/: CMakeLists.txt  benchmark.sh  histogram.cuh  link_condition.cuh  sec.cu  sec_kernels.cuh  sec_rxmesh.cuh
apps/Simplification/: CMakeLists.txt  simplification.cu  simplification_kernels.cuh  simplification_rxmesh.cuh
apps/Smoothing/: CMakeLists.txt  manual.h  run.cmd  smoothing.cu
apps/SparseMatrix/: CMakeLists.txt  dense_matrix.cuh  matrix_operation.cuh  sparse_matrix.cu  sparse_matrix.cuh  sparse_matrix_mcf.cuh  sparse_matrix_test.cu
apps/SurfaceTracking/: CMakeLists.txt  benchmark.sh  collapser.cuh  eigen.cmake  flipper.cuh  frame_stepper.h  improving_kernels.cuh  link_condition.cuh  noise.h  primitives.cuh  simulation.h  smoother.cuh  splitter.cuh  tracking.cu  tracking_kernels.cuh  tracking_rxmesh.cuh  util.cuh
apps/VertexNormal/: CMakeLists.txt  benchmark.sh  vertex_normal.cu  vertex_normal_hardwired.cuh  vertex_normal_kernel.cuh  vertex_normal_ref.h
apps/XPBD/: CMakeLists.txt  remesh.cuh  svd.cuh  xpbd.cu
apps/common/: openmesh_report.h  openmesh_trimesh.h
dev/: CMakeLists.txt  benchmark.cpp  debug_min_vertex_cover.cpp  detailed_ordering_benchmark.cpp
dev/AnalysisScripts/FactorVisualization/: see_factor.py
dev/AnalysisScripts/OrderingAnalysis/: see_ratio.py
dev/GPUOrdering/: gpu_ordering.cu  gpu_ordering.h  gpu_ordering_v2.cu  gpu_ordering_v2.h  gpu_ordering_v3.cu  gpu_ordering_v3.h
dev/LeftLooking_Parth/: common.cpp  executor.cpp  inspector.cpp  solve.cpp
dev/LeftLooking_Parth/custom_cholmod_files/: parth_analyze.cpp  parth_factorize.cpp  parth_numeric_supernode.cpp  parth_solve.cpp  parth_solve_supernode.cpp  parth_super_symbolic.cpp
dev/LeftLooking_Parth/include/: parth_solver.h
dev/LeftLooking_Parth/utils/: compute_etree_inv.cpp  compute_etree_inv.h
dev/LinSysSolvers/: CHOLMODSolver.cpp  CHOLMODSolver.hpp  CUDSSSolver.cu  CUDSSSolver.hpp  LinSysSolver.cpp  LinSysSolver.hpp  ParthSolver.cpp  ParthSolver.hpp  STRUMPACKSolver.cpp  STRUMPACKSolver.hpp
dev/Ordering/: metis_ordering.cpp  metis_ordering.h  neutral_ordering.cpp  neutral_ordering.h  ordering.cpp  ordering.cu  ordering.h  parth_ordering.cpp  parth_ordering.h  poc_ordering.cu  poc_ordering.h  rxmesh_ordering.cu  rxmesh_ordering.h
dev/utils/: check_valid_permutation.cpp  check_valid_permutation.h  compute_inverse_perm.cpp  compute_inverse_perm.h  cuda_error_handler.h  get_factor_nnz.cpp  get_factor_nnz.h  metis_helper.cpp  metis_helper.h  min_vertex_cover_bipartite.cpp  min_vertex_cover_bipartite.h  nvtx_helper.h  remove_diagonal.cpp  remove_diagonal.h
(+389 files in other folders)
