add_subdirectory(Filtering)
add_subdirectory(VertexNormal)
add_subdirectory(MCF)
add_subdirectory(Geodesic)
add_subdirectory(Delaunay)
add_subdirectory(GaussianCurvature)
add_subdirectory(XPBD)
#add_subdirectory(Simplification)
add_subdirectory(SECHistogram)
add_subdirectory(Remesh)
#add_subdirectory(SECPriority)
add_subdirectory(SurfaceTracking)
add_subdirectory(SCP)
add_subdirectory(ARAP)
add_subdirectory(Heat)
add_subdirectory(NDReorder)
add_subdirectory(Param)